[package]
name = "core-math-rs"
version = "0.1.0"
edition = "2024"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>", "Paul Zimmermann <Paul.Zimmermann@inria.fr>"]
license = "MIT"
rust-version = "1.85"

[dependencies]
hexf = { version = "0.2.1", default-features = false }

[dev-dependencies]
# https://github.com/jdh8/core-math-sys/issues/1
anyhow = { version = "1.0.25", default-features = false }
core-math = { version = "1.1.1", default-features = false }

[features]
f16 = ["core-math/f16"]
